# adapted-chaum-pedersen

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  docker-compose.yaml  flake.nix
docker/: Dockerfile.server
src/: cli.rs  client.rs  errors.rs  lib.rs  server.rs
src/authentication/: common.rs  mod.rs
src/authentication/ellipticcurve/: mod.rs
src/authentication/exponentiation/: mod.rs
src/proto/: messages.proto  zkp_auth.proto
