[package]
name = "acp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/acp.rs"
name = "acp"

[dependencies]
anyhow = "1.0.81"
bigint = "4.4.3"
clap = { version = "4.5.4", features = ["derive"] }
curve25519-dalek = "4.1.3"
moka = { version = "0.12.5", features = ["future","sync"] }
num = "0.4.1"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.18"
proptest = "1.4.0"
prost = "0.12.3"
rand = "0.8.5"
rpassword = "7.3.1"
test-case = "3.3.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.11.0"
